0.7/_sources/api/generated/deepchecks.vision.checks.train_test_validation.NewLabels.rst.txt

NewLabels
=========



.. currentmodule:: deepchecks.vision.checks.train_test_validation

.. autoclass:: NewLabels
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   NewLabels.add_condition
   
   
   NewLabels.add_condition_new_label_ratio_not_greater_than
   
   
   NewLabels.clean_conditions
   
   
   NewLabels.compute
   
   
   NewLabels.conditions_decision
   
   
   NewLabels.finalize_check_result
   
   
   NewLabels.initialize_run
   
   
   NewLabels.metadata
   
   
   NewLabels.name
   
   
   NewLabels.params
   
   
   NewLabels.remove_condition
   
   
   NewLabels.run
   
   
   NewLabels.update
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_new_labels_thumb.png
     :alt: NewLabels

     :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_new_labels.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


