0.10/_sources/api/generated/deepchecks.vision.checks.train_test_validation.NewLabels.rst.txt

NewLabels
=========



.. currentmodule:: deepchecks.vision.checks.train_test_validation

.. autoclass:: NewLabels
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   NewLabels.add_condition
   
   
   NewLabels.add_condition_new_label_ratio_less_or_equal
   
   
   NewLabels.clean_conditions
   
   
   NewLabels.compute
   
   
   NewLabels.conditions_decision
   
   
   NewLabels.config
   
   
   NewLabels.from_config
   
   
   NewLabels.from_json
   
   
   NewLabels.greater_is_better
   
   
   NewLabels.initialize_run
   
   
   NewLabels.metadata
   
   
   NewLabels.name
   
   
   NewLabels.params
   
   
   NewLabels.reduce_output
   
   
   NewLabels.remove_condition
   
   
   NewLabels.run
   
   
   NewLabels.to_json
   
   
   NewLabels.update
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/vision/train_test_validation/images/thumb/sphx_glr_plot_new_labels_thumb.png
     :alt: NewLabels

     :ref:`sphx_glr_checks_gallery_vision_train_test_validation_plot_new_labels.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


